# mindgym-service

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PR_TEMPLATE.md  Procfile  README.md  config.py  main.py  models.py  onboarding.py  onboarding_personalisation_plan.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  session_quality.md
.github/workflows/: ci.yml
api/: auth.py
lib/: auth_dependencies.py
mindgym-client-main/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
scripts/: smoke-login.sh
src/: __init__.py  main.py
src/api/: .env.example  __init__.py  auth.py  coach.py  daily_focus.py  insights.py  internal.py  interviews.py  jobs.py  jobs_id.py  mood_logs.py  onboarding.py  progress.py  requirements.txt  sessions.py  streaks.py  subscriptions.py  users.py  weekly_mission.py
src/lib/: __init__.py  auth.py  auth_dependencies.py  auth_service.py  config.py  elevenlabs_service.py  emotional_calibration.py  errors.py  fallbacks.py  gemini.py  gemini_service.py  interview_checkin_job.py  interview_checkin_notifications.py  job_resources.py  oauth.py  openai_service.py  prompt_builder.py  session_service.py  subscription_service.py  supabase.py  supabase_client.py  tokens.py  utils.py
src/mindgym_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/prompts/: resource_guidance.py  system_prompt.py  user_prompt.py
src/types/: __init__.py  auth.py  coach.py  daily_focus.py  insight.py  interview.py  job.py  models.py  mood_log.py  progress.py  session.py  (+3 more)
tst/: __init__.py  conftest.py
(+120 files in other folders)
