[project]
name = "mindgym-service"
version = "0.1.0"
description = "FastAPI backend for MindGym onboarding and meditation platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "google-auth==2.25.2",
    "google-auth-oauthlib==1.1.0",
    "pyjwt==2.8.0",
    "supabase>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
